Update to Java 16 and new sonar cloud